@@ -10,13 +10,14 @@ import com.fincatto.documentofiscal.validadores.DFXMLValidador;
 import org.apache.axiom.om.OMElement;
 
 import java.math.BigDecimal;
+import java.util.Arrays;
 import java.util.List;
 
 class WSPrestacaoEmDesacordo extends WSRecepcaoEvento {
     private static final String DESCRICAO_EVENTO = "Prestacao do Servico em Desacordo";
     private static final BigDecimal VERSAO_LEIAUTE = new BigDecimal("3.00");
     private static final String EVENTO_SERVICO_EM_DESACORDO = "610110";
-    private static final List<DFModelo> modelosPermitidos = List.of(DFModelo.CTE, DFModelo.CTeOS);
+    private static final List<DFModelo> modelosPermitidos = Arrays.asList(DFModelo.CTE, DFModelo.CTeOS);
 
     WSPrestacaoEmDesacordo(final CTeConfig config) {
         super(config, modelosPermitidos);
